--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,41 @@ body {
   margin: 0;
 }
 
+.bgimg {
+    background-image: url('https://cdn-images-1.medium.com/max/1200/1*R_sy6laZff_k5wRvii-UbA.png');
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    color: white;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 25px;
+}
+
+.topleft {
+    position: absolute;
+    top: 0;
+    left: 16px;
+}
+
+.bottomleft {
+    position: absolute;
+    bottom: 0;
+    left: 16px;
+}
+
+.middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+hr {
+    margin: auto;
+    width: 40%;
+}
 article,
 aside,
 details,
